force-app/main/default/objects/Satisfaction_Survey__c/Satisfaction_Survey__c.object-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <label>Satisfaction Survey</label>
    <nameField>
        <displayFormat>SS-{0000000000}</displayFormat>
        <label>Satisfaction Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Satisfaction Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>