force-app/main/default/objects/Satisfaction_Survey__c/fields/Benefits_for_participating__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Benefits_for_participating__c</fullName>
    <label>Benefits for participating</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Relieve Stress</fullName>
            </value>
            <value>
                <fullName>Meet People</fullName>
            </value>
            <value>
                <fullName>Less Pain</fullName>
            </value>
            <value>
                <fullName>Less Anxiety/Depression</fullName>
            </value>
            <value>
                <fullName>Strengthen Bonds</fullName>
            </value>
            <value>
                <fullName>Have Fun</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>