force-app/main/default/objects/Satisfaction_Survey__c/fields/Classes_Attended__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Classes_Attended__c</fullName>
    <label>Classes Attended</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bollywood</fullName>
            </value>
            <value>
                <fullName>Chair Massage</fullName>
            </value>
            <value>
                <fullName>Chair Stretch &amp; Boogie</fullName>
            </value>
            <value>
                <fullName>Cooking Demo</fullName>
            </value>
            <value>
                <fullName>Hip-Hop Dance</fullName>
            </value>
            <value>
                <fullName>Salsa Dance</fullName>
            </value>
            <value>
                <fullName>Strength Training</fullName>
            </value>
            <value>
                <fullName>Yoga</fullName>
            </value>
            <value>
                <fullName>Zumba</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>