force-app/main/default/objects/Satisfaction_Survey__c/fields/Duration__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>This is my first WOW class</fullName>
            </value>
            <value>
                <fullName>Less than 3 months</fullName>
            </value>
            <value>
                <fullName>Between 3 months - 1 year</fullName>
            </value>
            <value>
                <fullName>More than 1 year</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
                <default>true</default>
                <label>Not Disclosed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>