force-app/main/default/objects/Satisfaction_Survey__c/fields/How_many_classes_do_you_atten_a_week__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>How_many_classes_do_you_atten_a_week__c</fullName>
    <description>How many classes do you usually attend per week?</description>
    <label>How many classes per week?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1 class per week</fullName>
            </value>
            <value>
                <fullName>1-2 classes per week</fullName>
            </value>
            <value>
                <fullName>3-4 classes per week</fullName>
            </value>
            <value>
                <fullName>5 or more classes per week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>