force-app/main/default/objects/Satisfaction_Survey__c/fields/How_often_have_you_attended_WOW_classes__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>How_often_have_you_attended_WOW_classes__c</fullName>
    <label>How many WOW classes have you attended?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 times</fullName>
            </value>
            <value>
                <fullName>1-5 times</fullName>
            </value>
            <value>
                <fullName>6-10 times</fullName>
            </value>
            <value>
                <fullName>10-20 times</fullName>
            </value>
            <value>
                <fullName>20+ times</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>