force-app/main/default/objects/Satisfaction_Survey__c/fields/Overall_satisfaction_with_WOW_classes__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Overall_satisfaction_with_WOW_classes__c</fullName>
    <label>Overall satisfaction with WOW classes</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Very unsatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>