force-app/main/default/objects/Satisfaction_Survey__c/fields/Recommendations_for_Improvement__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Recommendations_for_Improvement__c</fullName>
    <label>Recommendations for Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>