force-app/main/default/objects/Satisfaction_Survey__c/fields/SFGH_Patient__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>SFGH_Patient__c</fullName>
    <label>SFGH Patient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
                <default>true</default>
                <label>Not Disclosed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>