force-app/main/default/objects/Satisfaction_Survey__c/fields/Since_attended_you_have__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Since_attended_you_have__c</fullName>
    <description>How have you benefited form attending the WOW classes?</description>
    <label>Since attended you have</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost weight</fullName>
            </value>
            <value>
                <fullName>Gained more energy and focus</fullName>
            </value>
            <value>
                <fullName>Lowered my blood glucose levels</fullName>
            </value>
            <value>
                <fullName>Cooked healthier meals</fullName>
            </value>
            <value>
                <fullName>Management my health condition better</fullName>
            </value>
            <value>
                <fullName>Gained friends and allies in the hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>