force-app/main/default/objects/Satisfaction_Survey__c/fields/Would_you_recommend_WOW_classes__c.field-meta.xml
<!--
  ~ Copyright (c) 2018, salesforce.com, inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or
  ~ https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomField>
    <fullName>Would_you_recommend_WOW_classes__c</fullName>
    <description>Would you recommend WOW classes to friends, coworkers, or family?</description>
    <label>Would you recommend WOW classes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Definitely yes</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Definitely no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>